# File-Compressor-and-Decompressor

./: .gitignore  CMakeLists.txt  README  README.md
include/: bit_reader.hpp  bit_writer.hpp  compressor.hpp  decompressor.hpp  errors.hpp  file_format.hpp  frequency_table.hpp  huffman_code.hpp  huffman_tree.hpp
samples/: hello.txt
scripts/: build.sh  sanitize.sh  test.sh
src/: bit_reader.cpp  bit_writer.cpp  compressor.cpp  decompressor.cpp  file_format.cpp  frequency_table.cpp  huffman_code.cpp  main.cpp
tests/: test_bit_reader.cpp  test_bit_writer.cpp  test_frequency_table.cpp  test_huffman_tree.cpp  test_malformed.cpp  test_roundtrip.cpp
